# periodical-distiller

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md  collaboration-protocol.org
.github/: pull_request_template.md
.github/workflows/: ci.yml
doc/: design.org  todo.org
docs/: design.org  forum.org  implementation-guidelines.org  richard_analysis.org  sample_mets.xml
resources/stylesheets/: article.css
resources/templates/: article.html.j2
src/periodical_distiller/: __init__.py  cli.py  fetch-from-2020.py  generate-sips-from-pips.py  report-sip-sizes.py
src/periodical_distiller/aggregators/: __init__.py  media_downloader.py  pip_aggregator.py
src/periodical_distiller/clients/: __init__.py  ceo_client.py  client.py  exceptions.py
src/periodical_distiller/compilers/: __init__.py  compiler.py  mets_compiler.py  veridian_sip_compiler.py
src/periodical_distiller/pipeline/: __init__.py  orchestrator.py  plumbing.py
src/periodical_distiller/serializers/: __init__.py
src/periodical_distiller/transformers/: __init__.py  alto_transformer.py  filters.py  html_transformer.py  (+4 more)
src/schemas/: __init__.py  article.py  ceo_item.py  issue.py  page.py  pip.py  sip.py
tests/: __init__.py  conftest.py  test_alto_transformer.py  test_ceo_client.py  test_cli.py  test_client.py  test_client_exceptions.py  test_html_transformer.py  test_image_transformer.py  test_media_downloader.py  test_mets_compiler.py  test_mods_transformer.py  test_pdf_transformer.py  test_pip_aggregator.py  test_pipeline_filters.py  test_plumbing.py  test_schemas.py
(+12 files in other folders)
