[project]
name = "periodical-distiller"
version = "0.1.0"
description = "Creates METS/ALTO packages for ingest into Veridian Presentation Software"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "lxml>=5.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "weasyprint>=62",
    "pyyaml>=6.0",
    "pymupdf>=1.24",
    "html2text>=2020.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.resolution]
provider = "uv"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
